# llama3.2-1B-tool

./: .gitignore  AGENTS.md  ENVIRONMENT.md  EXECUTION_GUIDE.md  README.md  main.py  pyproject.toml  requirements.txt  run_pipeline.sh
configs/: bfcl_config.yaml  grpo_config.yaml  sft_config.yaml
docs/: ABLATION2_DATA_DESIGN.md  BFCL_SGLANG_COMPATIBILITY.md  PROJECT_FLOW.md  PROJECT_REPORT.md
docs/tasks/: prepare_data_toolace_refactor.md
scripts/: 10_shuffle_tool_schema.py  11_filter_retokenize_processed.py  1_download_model.py  2_prepare_data.py  2_prepare_data_abalation1.py  2_prepare_data_abalation2.py  2_prepare_data_ablation1.py  2_prepare_data_ablation2.py  2_prepare_dataset.py  3_sft_training.py  4_analyze_refusal_ablation.py  4_grpo_training.py  5_evaluate.py  5_generate_refusal_teacher_actions.py  6_inference.py  7_bfcl_evaluation.py  8_lora_merge.py  9_make_sglang_compatible.py  tmp_analyze_refusal_ablation.py  tmp_generate_refusal_teacher_actions.py
scripts/utils/: sglang_compat.py  utils.py
test/: deepseek.py  pipeline.py  special_token.py  test_single.py  upload_model_modelscope.py
