[project]
name = "agentic-tool"
version = "0.1.0"
description = "Llama3.2-1B post-training with SFT+GRPO for function calling optimization"
readme = "README.md"
requires-python = "==3.11.14"
dependencies = [
    "torch>=2.12.0",
    "transformers>=4.40.0",
    "datasets>=2.18.0",
    "peft>=0.7.1",
    "trl>=0.7.10",
    "modelscope>=1.13.0",
    "accelerate>=0.27.0",
    "wandb>=0.16.0",
    "bitsandbytes>=0.43.0",
    "bfcl>=0.2.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "socksio>=1.0.0",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
