[project]
name = "agentic-tool"
version = "0.1.0"
description = "Llama3.2-1B SFT post-training for function calling optimization"
readme = "README.md"
requires-python = "==3.11.14"
dependencies = [
    "torch==2.12.0",
    "transformers==5.9.0",
    "datasets==4.8.5",
    "peft==0.19.1",
    "trl==1.5.1",
    "modelscope==1.37.1",
    "accelerate==1.13.0",
    "wandb==0.27.0",
    "bitsandbytes==0.49.2",
    "pydantic==2.13.4",
    "pyyaml==6.0.3",
    "socksio==1.0.0",
    "openai>=2.41.0",
]

[dependency-groups]
monitor = [
    "tensorboard==2.20.0",
]
notebook = [
    "ipython==9.8.0",
    "jupyter==1.1.1",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
